--- a/web/strategy.html
+++ b/web/strategy.html
@@ -62,7 +62,7 @@
             <!--主体main-->
             <div id="Main">
                 <ul id="pdf">
-                    /*<li><a href="../text/骆驼社宣讲会.pptx">骆驼社宣讲会.pptx</a></li>*/
+                    <!-- <li><a href="../text/骆驼社宣讲会.pptx">骆驼社宣讲会.pptx</a></li> -->
                     <li><a href="../text/旅行装备攻略.pdf">旅行装备攻略.pdf</a></li>
                     <li><a href="../text/穷游锦囊-旅行摄影.pdf">穷游锦囊-旅行摄影.pdf</a></li>
                     <li><a href="../text/重庆户外24条驴行路线.pdf">重庆户外24条驴行路线.pdf</a></li>
