--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <!--主体main-->
             <div id="Main">
-                <img id="mainPhoto" src="luotuo/ciaqishan.jpg" alt="图片消失了呀~">
+                <img id="mainPhoto" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/ciaqishan.jpg" alt="图片消失了呀~">
                 <h3 id="maintitle">风吹彩旗，我们在山顶等你</h3>
                 <p>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我在高原草甸拾荒，收集散落的星辰和光。雪山之神没收了我的胆怯，让我的旅途轰轰烈烈。大雪纷飞里，我在世界中心，也在世界之外。
@@ -102,30 +102,30 @@
         <!--下方图片列表展示-->
         <div id="Photo">
             <div class="divphoto">
-            <img class="photo" src="luotuo/qizanggou1.jpg" alt="图片消失了呀~"><br>
+            <img class="photo" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/qizanggou1.jpg" alt="图片消失了呀~"><br>
             <a href="web/activity.html">探秘七藏沟</a>
             </div>
 
             <div class="divphoto">
-            <img class="photo" src="luotuo/yunhai.jpg" alt="图片消失了呀~"><br>
+            <img class="photo" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/yunhai.jpg" alt="图片消失了呀~"><br>
             <a href="web/activity.html">日出云海</a>                
             </div>
 
             <div class="divphoto">
-            <img class="photo" src="luotuo/qizanggoiu2.jpg" alt="图片消失了呀~"><br>
+            <img class="photo" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/qizanggoiu2.jpg" alt="图片消失了呀~"><br>
             <a href="web/activity.html">探秘七藏沟</a>                
             </div>
 
             <div class="divphoto">
-                <img class="photo" src="luotuo/zhuye.jpg" alt="图片消失了呀~"><br>
+                <img class="photo" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/zhuye.jpg" alt="图片消失了呀~"><br>
                 <a href="web/activity.html">观云海，睡草地，仰观星</a>                
             </div>
         </div>
 
         <!--页脚-->
         <footer>
-            <img id="footerphoto" src="luotuo/erweima.png" alt="QQ群二维码">
-            <img id="huibiao" src="luotuo/hushuiren.jpg" alt="会标">
+            <img id="footerphoto" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/erweima.png" alt="QQ群二维码">
+            <img id="huibiao" src="https://raw.githubusercontent.com/junshana/junshana.github.io/main/luotuo/hushuiren.jpg" alt="会标">
             <!-- <a href="web/hero.html">点击此处瞻仰老骆驼们的风姿~</a><br><br>  -->
             <br>
             <p>心动吗？快快扫码加群吧❤</p>  <br>
