--- a/web/activity.html
+++ b/web/activity.html
@@ -15,7 +15,7 @@
 
         <!--眉头-->
             <header>
-                <img id="logo" src="../luotuo/logo.jpg" alt="社徽">
+                <img id="logo" src="../logo.jpg" alt="社徽">
                 <h1>骆驼社，游天下</h1>
                 </header>
 
@@ -63,7 +63,7 @@
             <div id="Main">
                 <article>
                 <li class="partlist" id="2021_10_2">part:2021-10-2</li>
-                <img class="article" src="../luotuo/hezhao.jpg" alt="图片">
+                <img class="article" src="../hezhao.jpg" alt="图片">
                 <details>
                     <summary>
                     <!-- <a href="../web/list/金佛山.html">“山赶着山，山山漫漫结成关”-国庆追星记</a> -->
@@ -91,7 +91,7 @@
 
             <article>
                 <li class="partlist" id="2021_6_14">part:2021-6-14</li>
-                <img class="article" src="../luotuo/hezhao2.jpg" alt="合照">
+                <img class="article" src="../hezhao2.jpg" alt="合照">
                 <details>
                     <summary>
                     <!-- <a href="../web/list/金佛山.html">“山赶着山，山山漫漫结成关”-国庆追星记</a> -->
@@ -106,7 +106,7 @@
 
                 <article>
                     <li class="partlist" id="2021_5_10">part:2021-5-10</li>
-                    <img class="article" src="../luotuo/yunhai.jpg" alt="图片">
+                    <img class="article" src="../yunhai.jpg" alt="图片">
                     <details>
                         <summary>
                         <!-- <a href="../web/list/金佛山.html">“山赶着山，山山漫漫结成关”-国庆追星记</a> -->
@@ -127,7 +127,7 @@
                 
                 <article>
                     <li class="partlist" id="2021_4_5">part:2021-4-5</li>
-                    <img class="article" src="../luotuo/caihua.jpg" alt="图片">
+                    <img class="article" src="../caihua.jpg" alt="图片">
                     <details>
                         <summary>
                         <!-- <a href="../web/list/金佛山.html">“山赶着山，山山漫漫结成关”-国庆追星记</a> -->
@@ -150,8 +150,8 @@
 
         <!--页脚-->
         <footer>
-            <img id="footerphoto" src="../luotuo/erweima.png" alt="QQ群二维码">
-            <img id="huibiao" src="../luotuo/hushuiren.jpg" alt="会标">
+            <img id="footerphoto" src="../erweima.png" alt="QQ群二维码">
+            <img id="huibiao" src="../hushuiren.jpg" alt="会标">
             <!-- <a href="web/hero.html">点击此处瞻仰老骆驼们的风姿~</a><br><br>  -->
             <br>
             <p>心动吗？快快扫码加群吧❤</p>  <br>
