--- a/web/hero.html
+++ b/web/hero.html
@@ -14,7 +14,7 @@
 
         <!--眉头-->
             <header>
-                <img id="logo" src="../luotuo/logo.jpg" alt="社徽">
+                <img id="logo" src="../logo.jpg" alt="社徽">
                 <h1>骆驼社，游天下</h1>
                 </header>
 
@@ -68,7 +68,7 @@
             <!--成员介绍  -->
             <article>
                 <li class="partlist" id="list1">part:瞎子</li>
-                <img class="article" src="../luotuo/hezhao2.jpg" alt="图片">
+                <img class="article" src="../hezhao2.jpg" alt="图片">
                 <details>
                     <summary>
                     <!-- <a href="../web/list/金佛山.html">“山赶着山，山山漫漫结成关”-国庆追星记</a> -->
@@ -85,8 +85,8 @@
 
         <!--页脚-->
         <footer>
-            <img id="footerphoto" src="../luotuo/erweima.png" alt="QQ群二维码">
-            <img id="huibiao" src="../luotuo/hushuiren.jpg" alt="会标">
+            <img id="footerphoto" src="../erweima.png" alt="QQ群二维码">
+            <img id="huibiao" src="../hushuiren.jpg" alt="会标">
             <!-- <a href="web/hero.html">点击此处瞻仰老骆驼们的风姿~</a><br><br>  -->
             <br>
             <p>心动吗？快快扫码加群吧❤</p>  <br>
