--- a/web/message.html
+++ b/web/message.html
@@ -15,7 +15,7 @@
 
         <!--眉头-->
             <header>
-                <img id="logo" src="../luotuo/logo.jpg" alt="社徽">
+                <img id="logo" src="../logo.jpg" alt="社徽">
                 <h1>骆驼社，游天下</h1>
                 </header>
 
@@ -63,7 +63,7 @@
             <div id="Main">
                 <article>
                     <li class="partlist" id="xuyuanchi"></li><!-- 千鲤许愿池 -->
-                    <img class="article" src="../luotuo/xuyuanchi.jpg" alt="图片">
+                    <img class="article" src="../xuyuanchi.jpg" alt="图片">
                     <details open="true">
                         <summary>
                         <h3 class="maintitle">千鲤许愿池</h3> 
@@ -79,8 +79,8 @@
 
         <!--页脚-->
         <footer>
-            <img id="footerphoto" src="../luotuo/erweima.png" alt="QQ群二维码">
-            <img id="huibiao" src="../luotuo/hushuiren.jpg" alt="会标">
+            <img id="footerphoto" src="../erweima.png" alt="QQ群二维码">
+            <img id="huibiao" src="../hushuiren.jpg" alt="会标">
             <!-- <a href="web/hero.html">点击此处瞻仰老骆驼们的风姿~</a><br><br>  -->
             <br>
             <p>心动吗？快快扫码加群吧❤</p>  <br>
