--- a/web/strategy.html
+++ b/web/strategy.html
@@ -14,7 +14,7 @@
 
         <!--眉头-->
             <header>
-                <img id="logo" src="../luotuo/logo.jpg" alt="社徽">
+                <img id="logo" src="../logo.jpg" alt="社徽">
                 <h1>骆驼社，游天下</h1>
                 </header>
 
@@ -128,8 +128,8 @@
 
         <!--页脚-->
         <footer>
-            <img id="footerphoto" src="../luotuo/erweima.png" alt="QQ群二维码">
-            <img id="huibiao" src="../luotuo/hushuiren.jpg" alt="会标">
+            <img id="footerphoto" src="../erweima.png" alt="QQ群二维码">
+            <img id="huibiao" src="../hushuiren.jpg" alt="会标">
             <!-- <a href="web/hero.html">点击此处瞻仰老骆驼们的风姿~</a><br><br>  -->
             <br>
             <p>心动吗？快快扫码加群吧❤</p>  <br>
